logre conexion con db en AZURE

--- a/solucionProdent/persistencia/persistencia.csproj
+++ b/solucionProdent/persistencia/persistencia.csproj
@@ -45,6 +45,12 @@
     <Compile Include="pacienteDAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\dominio\dominio.csproj">
+      <Project>{4b9e54e9-7b65-4c44-be29-21f339dafa92}</Project>
+      <Name>dominio</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
