--- a/solucionProdent/presentacion/presentacion.csproj
+++ b/solucionProdent/presentacion/presentacion.csproj
@@ -76,8 +76,14 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frm-crudPaciente.resx">
+      <DependentUpon>frm-crudPaciente.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frm-login.resx">
       <DependentUpon>frm-login.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frm-principal.resx">
+      <DependentUpon>frm-principal.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -100,6 +106,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\aplicacion\aplicacion.csproj">
+      <Project>{227ae03b-bbec-4a6e-87ab-aa17f94729a7}</Project>
+      <Name>aplicacion</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\dominio\dominio.csproj">
+      <Project>{4b9e54e9-7b65-4c44-be29-21f339dafa92}</Project>
+      <Name>dominio</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
