--- a/solucionProdent/presentacion/presentacion.csproj
+++ b/solucionProdent/presentacion/presentacion.csproj
@@ -44,6 +44,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frm-addCitaMedica.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frm-addCitaMedica.Designer.cs">
+      <DependentUpon>frm-addCitaMedica.cs</DependentUpon>
+    </Compile>
     <Compile Include="frm-crudAsistente.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -76,6 +82,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frm-addCitaMedica.resx">
+      <DependentUpon>frm-addCitaMedica.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frm-crudPaciente.resx">
       <DependentUpon>frm-crudPaciente.cs</DependentUpon>
     </EmbeddedResource>
