--- a/solucionProdent/dominio/dominio.csproj
+++ b/solucionProdent/dominio/dominio.csproj
@@ -40,9 +40,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Asistente.cs" />
+    <Compile Include="Especialidad.cs" />
+    <Compile Include="HorarioAtencion.cs" />
     <Compile Include="Medico.cs" />
     <Compile Include="Paciente.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Usuario.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
