liste horarios de atencion con filtro de FECHA Y ESPECIALIDAD

--- a/solucionProdent/aplicacion/aplicacion.csproj
+++ b/solucionProdent/aplicacion/aplicacion.csproj
@@ -39,7 +39,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="crudMedico.cs" />
+    <Compile Include="ServicioEspecialidad.cs" />
+    <Compile Include="ServicioMedico.cs" />
     <Compile Include="ServicioPaciente.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServicioHorario.cs" />
