--- a/solucionProdent/dominio/dominio.csproj
+++ b/solucionProdent/dominio/dominio.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Asistente.cs" />
+    <Compile Include="CitaMedica.cs" />
     <Compile Include="Especialidad.cs" />
     <Compile Include="HorarioAtencion.cs" />
     <Compile Include="Medico.cs" />
