--- a/solucionProdent/persistencia/persistencia.csproj
+++ b/solucionProdent/persistencia/persistencia.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="asistenteDAO.cs" />
+    <Compile Include="citaMedicaDAO.cs" />
     <Compile Include="conexion.cs" />
     <Compile Include="especialidadDAO.cs" />
     <Compile Include="horarioAtencionDAO.cs" />
