--- a/solucionProdent/presentacion/presentacion.csproj
+++ b/solucionProdent/presentacion/presentacion.csproj
@@ -86,6 +86,12 @@
     <Compile Include="frm-principal.Designer.cs">
       <DependentUpon>frm-principal.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmAddTratamiento.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmAddTratamiento.Designer.cs">
+      <DependentUpon>frmAddTratamiento.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frm-addCitaMedica.resx">
@@ -102,6 +108,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frm-principal.resx">
       <DependentUpon>frm-principal.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmAddTratamiento.resx">
+      <DependentUpon>frmAddTratamiento.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
