--- a/solucionProdent/dominio/dominio.csproj
+++ b/solucionProdent/dominio/dominio.csproj
@@ -41,11 +41,13 @@
   <ItemGroup>
     <Compile Include="Asistente.cs" />
     <Compile Include="CitaMedica.cs" />
+    <Compile Include="DetalleCita.cs" />
     <Compile Include="Especialidad.cs" />
     <Compile Include="HorarioAtencion.cs" />
     <Compile Include="Medico.cs" />
     <Compile Include="Paciente.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tratamiento.cs" />
     <Compile Include="Usuario.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
