--- a/solucionProdent/presentacion/presentacion.csproj
+++ b/solucionProdent/presentacion/presentacion.csproj
@@ -92,6 +92,12 @@
     <Compile Include="frmAddTratamiento.Designer.cs">
       <DependentUpon>frmAddTratamiento.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmBuscarTratamiento.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmBuscarTratamiento.Designer.cs">
+      <DependentUpon>frmBuscarTratamiento.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frm-addCitaMedica.resx">
@@ -111,6 +117,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmAddTratamiento.resx">
       <DependentUpon>frmAddTratamiento.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmBuscarTratamiento.resx">
+      <DependentUpon>frmBuscarTratamiento.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
