--- a/solucionProdent/persistencia/persistencia.csproj
+++ b/solucionProdent/persistencia/persistencia.csproj
@@ -48,6 +48,7 @@
     <Compile Include="medicoDAO.cs" />
     <Compile Include="pacienteDAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TratamientoDAO.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\dominio\dominio.csproj">
