--- a/solucionProdent/presentacion/presentacion.csproj
+++ b/solucionProdent/presentacion/presentacion.csproj
@@ -104,6 +104,12 @@
     <Compile Include="frmBuscarTratamiento.Designer.cs">
       <DependentUpon>frmBuscarTratamiento.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmReporteDePacientesPorMedico.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmReporteDePacientesPorMedico.Designer.cs">
+      <DependentUpon>frmReporteDePacientesPorMedico.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="frm-addCitaMedica.resx">
@@ -129,6 +135,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmBuscarTratamiento.resx">
       <DependentUpon>frmBuscarTratamiento.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmReporteDePacientesPorMedico.resx">
+      <DependentUpon>frmReporteDePacientesPorMedico.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
