--- a/solucionProdent/presentacion/presentacion.csproj
+++ b/solucionProdent/presentacion/presentacion.csproj
@@ -80,17 +80,17 @@
     <Compile Include="frm-crudPaciente.Designer.cs">
       <DependentUpon>frm-crudPaciente.cs</DependentUpon>
     </Compile>
-    <Compile Include="frm-login.cs">
+    <Compile Include="frmIniciarSesion.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frm-login.Designer.cs">
-      <DependentUpon>frm-login.cs</DependentUpon>
+    <Compile Include="frmIniciarSesion.Designer.cs">
+      <DependentUpon>frmIniciarSesion.cs</DependentUpon>
     </Compile>
-    <Compile Include="frm-principal.cs">
+    <Compile Include="frmPrincipal.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="frm-principal.Designer.cs">
-      <DependentUpon>frm-principal.cs</DependentUpon>
+    <Compile Include="frmPrincipal.Designer.cs">
+      <DependentUpon>frmPrincipal.cs</DependentUpon>
     </Compile>
     <Compile Include="frmAddTratamiento.cs">
       <SubType>Form</SubType>
@@ -124,11 +124,11 @@
     <EmbeddedResource Include="frm-crudPaciente.resx">
       <DependentUpon>frm-crudPaciente.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frm-login.resx">
-      <DependentUpon>frm-login.cs</DependentUpon>
+    <EmbeddedResource Include="frmIniciarSesion.resx">
+      <DependentUpon>frmIniciarSesion.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="frm-principal.resx">
-      <DependentUpon>frm-principal.cs</DependentUpon>
+    <EmbeddedResource Include="frmPrincipal.resx">
+      <DependentUpon>frmPrincipal.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmAddTratamiento.resx">
       <DependentUpon>frmAddTratamiento.cs</DependentUpon>
@@ -147,6 +147,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -170,6 +171,12 @@
       <Project>{4b9e54e9-7b65-4c44-be29-21f339dafa92}</Project>
       <Name>dominio</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logo.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logo1.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
