--- a/solucionProdent/aplicacion/aplicacion.csproj
+++ b/solucionProdent/aplicacion/aplicacion.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServicioHorario.cs" />
     <Compile Include="ServicioTratamiento.cs" />
+    <Compile Include="ServicioUsuario.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\dominio\dominio.csproj">
