--- a/solucionProdent/dominio/dominio.csproj
+++ b/solucionProdent/dominio/dominio.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Medico.cs" />
     <Compile Include="Paciente.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sesion.cs" />
     <Compile Include="Tratamiento.cs" />
     <Compile Include="Usuario.cs" />
   </ItemGroup>
