--- a/solucionProdent/persistencia/persistencia.csproj
+++ b/solucionProdent/persistencia/persistencia.csproj
@@ -49,6 +49,7 @@
     <Compile Include="pacienteDAO.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TratamientoDAO.cs" />
+    <Compile Include="UsuarioDAO.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\dominio\dominio.csproj">
